search: Implement preliminary school search.
